force-app/main/default/objects/Contract/fields/Date_Debut_Token__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut_Token__c</fullName>
    <label>Début période token</label>
    <type>Date</type>
</CustomField>