force-app/main/default/objects/Contract/fields/Date_Fin_Token__c.field-meta.xml
<CustomField>
    <fullName>Date_Fin_Token__c</fullName>
    <label>Fin période token</label>
    <type>Date</type>
</CustomField>