force-app/main/default/objects/Contract/fields/Montant_Abonnement__c.field-meta.xml
<CustomField>
    <fullName>Montant_Abonnement__c</fullName>
    <label>Montant abonnement</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>