force-app/main/default/objects/Contract/fields/Montant_Token_Estime__c.field-meta.xml
<CustomField>
    <fullName>Montant_Token_Estime__c</fullName>
    <label>Montant token estimé</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>