force-app/main/default/objects/Contract/fields/Type_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Type_Facturation__c</fullName>
    <label>Type de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abonnement</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>